--- a/_sass/_root_page.scss
+++ b/_sass/_root_page.scss
@@ -202,6 +202,7 @@ $side-panel-width: $side-width - $padding;
 
   .view__tabs {
     padding-top: 5px;
+    width: 600px;
   }
 
   .view__tab, .view__tab--active {
