--- a/_sass/_view.scss
+++ b/_sass/_view.scss
@@ -106,7 +106,7 @@ $view-tag-flag-size: 16px;
   font-size: 30px;
   font-weight: bold;
   display: block;
-  margin: 0 100px 0 0;
+  margin: 0 70px 0 0;
 }
 
 .view__title_link {
